--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -41,6 +41,14 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <ImageView
+        android:id="@+id/error"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:tint="#DCDCDC"
+        android:src="@drawable/ic_error"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/movies"
         android:layout_width="match_parent"
@@ -50,6 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:overScrollMode="never"
         tools:items="@layout/item_movie" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
