--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -1,168 +1,219 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E9E9E9">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="4dp">
+
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsingToolbarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:contentScrim="#5695CF"
+            tools:title="Film with very long title oh my god"
+            app:maxLines="2"
+            app:expandedTitleMarginStart="24dp"
+            app:collapsedTitleTextAppearance="@style/TextAppearance.TestApp.Title.Collapsed"
+            app:expandedTitleTextAppearance="@style/TextAppearance.TestApp.Title.Expanded"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_collapseMode="parallax">
+                
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="64dp"
+                    android:background="@drawable/scrim_top"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:translationZ="1dp"/>
+
+                <ImageView
+                    android:id="@+id/poster"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:srcCompat="@tools:sample/backgrounds/scenic"/>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="88dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:background="@drawable/scrim_bottom"
+                    android:translationZ="1dp"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/collapsedToolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode = "pin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/back"
+                    style="@style/Widget.TestApp.IconButton"
+                    android:layout_gravity="start"
+                    app:icon="@drawable/ic_back_arrow"
+                    app:iconSize="26dp"
+                    app:iconTint="?attr/colorOnPrimary" />
+
+            </com.google.android.material.appbar.MaterialToolbar>
+
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="8dp">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:background="#E9E9E9"
+        android:overScrollMode="never">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="#000000"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/back"
-                style="@style/Widget.TestApp.IconButton"
-                android:layout_gravity="start"
-                android:layout_marginStart="8dp"
-                app:icon="@drawable/ic_back_arrow"
-                app:iconSize="26dp"
-                app:iconTint="?attr/colorOnPrimary" />
-
-        </com.google.android.material.appbar.MaterialToolbar>
-
-        <ImageView
-            android:id="@+id/poster"
-            android:layout_width="220dp"
-            android:layout_height="280dp"
-            android:layout_marginTop="16dp"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            tools:src="@tools:sample/backgrounds/scenic" />
-
-        <LinearLayout
-            android:id="@+id/mainInformation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:background="#FFFFFF"
-            android:orientation="vertical"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:paddingBottom="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/poster">
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:ellipsize="end"
-                android:textColor="#000000"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                tools:text="Harry Potter" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/releaseDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="12-20-04"/>
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/genres"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000000"
-                tools:text="Horror, Horror, Horror" />
-
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#000000"
-                android:textSize="18sp"
-                tools:text="film film and film" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/castLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/mainInformation"
-            app:layout_constraintStart_toStartOf="@+id/mainInformation"
-            app:layout_constraintEnd_toEndOf="@+id/mainInformation"
-            android:orientation="vertical">
-
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:ellipsize="end"
-                android:textColor="#000000"
-                android:textSize="22sp"
-                android:layout_marginStart="8dp"
-                android:textStyle="bold"
-                android:text="Cast" />
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/cast"
+            <LinearLayout
+                android:id="@+id/mainInformation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                android:overScrollMode="never"
-                tools:listitem="@layout/item_actor"/>
+                android:background="#FFFFFF"
+                android:orientation="vertical"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingBottom="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
-        </LinearLayout>
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:ellipsize="end"
+                    android:textColor="#000000"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    tools:text="Harry Potter" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/castLayout"
-            app:layout_constraintStart_toStartOf="@+id/castLayout"
-            app:layout_constraintEnd_toEndOf="@+id/castLayout"
-            android:orientation="vertical">
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/releaseDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="12-20-04"/>
 
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/genres"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000000"
+                    tools:text="Horror, Horror, Horror" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    tools:text="film film and film" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/castLayout"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:background="#FFFFFF"
                 android:layout_marginTop="8dp"
-                android:ellipsize="end"
-                android:textColor="#000000"
-                android:textSize="22sp"
-                android:layout_marginStart="8dp"
-                android:textStyle="bold"
-                android:text="Directors" />
+                app:layout_constraintTop_toBottomOf="@+id/mainInformation"
+                app:layout_constraintStart_toStartOf="@+id/mainInformation"
+                app:layout_constraintEnd_toEndOf="@+id/mainInformation"
+                android:orientation="vertical">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:ellipsize="end"
+                    android:textColor="#000000"
+                    android:textSize="22sp"
+                    android:layout_marginStart="8dp"
+                    android:textStyle="bold"
+                    android:text="Cast" />
 
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/directors"
-                android:layout_width="match_parent"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/cast"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:overScrollMode="never"
+                    tools:listitem="@layout/item_actor"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:background="#FFFFFF"
                 android:layout_marginTop="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                android:overScrollMode="never"
-                tools:listitem="@layout/item_director"/>
+                app:layout_constraintTop_toBottomOf="@+id/castLayout"
+                app:layout_constraintStart_toStartOf="@+id/castLayout"
+                app:layout_constraintEnd_toEndOf="@+id/castLayout"
+                android:orientation="vertical">
 
-        </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.core.widget.NestedScrollView>
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:ellipsize="end"
+                    android:textColor="#000000"
+                    android:textSize="22sp"
+                    android:layout_marginStart="8dp"
+                    android:textStyle="bold"
+                    android:text="Directors" />
+
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/directors"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    android:overScrollMode="never"
+                    tools:listitem="@layout/item_director"/>
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
