--- a/app/src/main/res/layout/item_director.xml
+++ b/app/src/main/res/layout/item_director.xml
@@ -22,7 +22,7 @@
         android:layout_gravity="center"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
-        android:textStyle="bold"
+        android:fontFamily="@font/roboto_bold"
         tools:text="Bred Pit"/>
 
 </LinearLayout>
