--- a/app/src/main/res/layout/item_actor.xml
+++ b/app/src/main/res/layout/item_actor.xml
@@ -1,42 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="140dp"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
+    android:layout_width="140dp"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
-    android:layout_gravity="center_horizontal"
-    android:layout_height="wrap_content"
-    android:background="#424242">
+    android:background="#424242"
+    android:orientation="vertical">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="172dp"
         android:scaleType="centerCrop"
-        tools:src="@tools:sample/backgrounds/scenic"/>
-
-    <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/character"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:layout_gravity="center"
-        android:textSize="18sp"
-        android:textColor="#FFFFFF"
-        android:textStyle="bold"
-        tools:text="Harry Potter"/>
+        tools:src="@tools:sample/backgrounds/scenic" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:textColor="#DCDCDC"
         android:layout_gravity="center"
+        android:ellipsize="end"
+        android:fontFamily="@font/roboto_bold"
+        android:maxLines="1"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
-        tools:text="Bred Pit"/>
+        tools:text="Bred Pit" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/character"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:ellipsize="end"
+        android:fontFamily="@font/roboto"
+        android:maxLines="1"
+        android:textColor="#DCDCDC"
+        android:textSize="18sp"
+        tools:text="Harry Potter" />
 
 </LinearLayout>
