--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -24,9 +24,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
+        android:ellipsize="end"
+        android:fontFamily="@font/roboto_bold"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -41,6 +42,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:ellipsize="end"
+        android:fontFamily="@font/roboto"
         android:gravity="center"
         android:maxLines="3"
         android:textColor="#FFFFFF"
