Fix gravity in text views

--- a/app/src/main/res/layout/item_actor.xml
+++ b/app/src/main/res/layout/item_actor.xml
@@ -4,6 +4,7 @@
     android:layout_width="140dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
+    android:gravity="center_horizontal"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
     android:background="#424242"
@@ -20,11 +21,11 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:ellipsize="end"
+        android:gravity="center"
         android:fontFamily="@font/roboto_bold"
-        android:maxLines="1"
         android:textColor="#FFFFFF"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textSize="18sp"
         tools:text="Bred Pit" />
 
@@ -32,10 +33,10 @@
         android:id="@+id/character"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:gravity="center"
+        android:maxLines="1"
         android:ellipsize="end"
         android:fontFamily="@font/roboto"
-        android:maxLines="1"
         android:textColor="#DCDCDC"
         android:textSize="18sp"
         tools:text="Harry Potter" />
