--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -16,12 +16,13 @@
             android:layout_height="?attr/actionBarSize"
             app:layout_scrollFlags="scroll|enterAlways"
             android:background="#000000"
+            android:gravity="center_vertical"
             android:focusableInTouchMode="true">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/searchIcon"
                 style="@style/Widget.TestApp.IconButton"
-                android:layout_gravity="start"
+                android:layout_gravity="start|center_vertical"
                 android:layout_marginStart="8dp"
                 app:icon="@drawable/ic_search"
                 app:iconSize="26dp"
@@ -33,6 +34,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:inputType="text"
+                android:fontFamily="@font/roboto"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:textColor="#FFFFFF"
