--- a/app/src/main/res/layout/item_director.xml
+++ b/app/src/main/res/layout/item_director.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
+    android:gravity="center"
     android:layout_gravity="center_horizontal"
     android:layout_height="wrap_content">
 
@@ -19,7 +20,9 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:gravity="center"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         android:fontFamily="@font/roboto_bold"
