--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
-    android:gravity="center_horizontal"
     android:background="@drawable/rounded_layout_4dp"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <ImageView
@@ -15,6 +15,7 @@
         android:layout_height="210dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
+        android:transitionName="transition_poster"
         tools:src="@tools:sample/backgrounds/scenic" />
 
     <com.google.android.material.textview.MaterialTextView
@@ -24,13 +25,14 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:gravity="center"
-        android:maxLines="1"
         android:ellipsize="end"
         android:fontFamily="@font/roboto_bold"
+        android:gravity="center"
+        android:maxLines="1"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
+        android:transitionName="transition_name"
         tools:text="Harry Potter" />
 
     <com.google.android.material.textview.MaterialTextView
@@ -46,5 +48,6 @@
         android:maxLines="3"
         android:textColor="#FFFFFF"
         android:textSize="12sp"
+        android:transitionName="transition_description"
         tools:text="film film and film" />
 </LinearLayout>
