--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
 
     <color name="translucent_scrim_top">#33000000</color>
     <color name="translucent_scrim_top_center">#26000000</color>
-    <color name="translucent_scrim_bottom">#4D000000</color>
-    <color name="translucent_scrim_bottom_center">#40000000</color>
+    <color name="translucent_scrim_bottom">#000000</color>
+    <color name="translucent_scrim_bottom_center">#59000000</color>
 </resources>
