--- a/app/src/main/res/layout/fragment_movies.xml
+++ b/app/src/main/res/layout/fragment_movies.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000">
+    android:background="?attr/colorPrimary">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:layout_scrollFlags="scroll|enterAlways"
-            android:background="#000000"
+            android:background="?attr/colorPrimary"
             android:gravity="center_vertical"
             android:focusableInTouchMode="true">
 
@@ -26,7 +26,7 @@
                 android:layout_marginStart="8dp"
                 app:icon="@drawable/ic_search"
                 app:iconSize="26dp"
-                app:iconTint="?attr/colorOnPrimary" />
+                app:iconTint="?attr/colorAccent" />
 
             <EditText
                 android:id="@+id/searchInput"
@@ -37,8 +37,8 @@
                 android:fontFamily="@font/roboto"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:textColor="#FFFFFF"
-                android:backgroundTint="#FFFFFF"/>
+                android:textColor="?attr/colorAccent"
+                android:backgroundTint="?attr/colorAccent"/>
 
         </com.google.android.material.appbar.MaterialToolbar>
 
@@ -49,7 +49,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        android:tint="#DCDCDC"
+        android:tint="?attr/colorOnPrimary"
         android:src="@drawable/ic_error"/>
 
     <androidx.recyclerview.widget.RecyclerView
