--- a/app/src/main/res/layout/item_actor.xml
+++ b/app/src/main/res/layout/item_actor.xml
@@ -7,7 +7,7 @@
     android:gravity="center_horizontal"
     android:layout_marginStart="8dp"
     android:layout_marginEnd="8dp"
-    android:background="#424242"
+    android:background="?attr/colorSurface"
     android:orientation="vertical">
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:fontFamily="@font/roboto_bold"
-        android:textColor="#FFFFFF"
+        android:textColor="?attr/colorAccent"
         android:maxLines="1"
         android:ellipsize="end"
         android:textSize="18sp"
@@ -37,7 +37,7 @@
         android:maxLines="1"
         android:ellipsize="end"
         android:fontFamily="@font/roboto"
-        android:textColor="#DCDCDC"
+        android:textColor="?attr/colorOnSurface"
         android:textSize="18sp"
         tools:text="Harry Potter" />
 
