--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -29,7 +29,7 @@
         android:fontFamily="@font/roboto_bold"
         android:gravity="center"
         android:maxLines="1"
-        android:textColor="#FFFFFF"
+        android:textColor="?attr/colorAccent"
         android:textSize="16sp"
         android:textStyle="bold"
         android:transitionName="transition_name"
@@ -46,7 +46,7 @@
         android:fontFamily="@font/roboto"
         android:gravity="center"
         android:maxLines="3"
-        android:textColor="#FFFFFF"
+        android:textColor="?attr/colorAccent"
         android:textSize="12sp"
         android:transitionName="transition_description"
         tools:text="film film and film" />
